cmake_minimum_required(VERSION 3.17)
set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_CMAKE_PATH})
project(test)
SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH})
option(USE_OPTIMIZATION "use the optimization model" ON)
if(USE_OPTIMIZATION)
	find_package(Eigen3 REQUIRED)
	if (Eigen3_FOUND)
    	message(STATUS "${EIGEN3_VERSION_STRING}")
    	include_directories(${EIGEN3_INCLUDE_DIR})
	endif()
endif ()

find_package(Chimes REQUIRED)
if(Chimes_FOUND)
	include_directories(${Chimes_DIR})
endif()
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC Chimes::Optimization)
